<resources>
    <string name="app_name">RoblesAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_menuprincipal">Menu Principal</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_cierrex">Cierre X</string>
    <string name="menu_cierrez">Cierre Z</string>
    <string name="menu_cambioturno">Cambio Turno</string>
    <string name="menu_iniciodia">Inicio Día</string>
    <string name="menu_consultarcomprobante">Consultar Comprobante</string>
    <string name="menu_depositogrifo">Deposito Grifo</string>
    <string name="menu_anular">Anular</string>
    <string name="menu_cofglado">Configuración de Lado</string>

    <string name="detalla_venta">Detalles de las Ventas</string>
    <string name="edit_venta">Editar Detalles de las Ventas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>