<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menuprincipal"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_menuprincipal" />
        <item
            android:id="@+id/nav_factura"
            android:icon="@drawable/icon_facturacion"
            android:title="@string/menu_factura" />
        <item
            android:id="@+id/nav_cierreX"
            android:icon="@drawable/icon_cierrex"
            android:title="@string/menu_cierrex" />
        <item
            android:id="@+id/nav_cierreZ"
            android:icon="@drawable/icon_cierrez"
            android:title="@string/menu_cierrez" />
        <item
            android:id="@+id/nav_cambioturno"
            android:icon="@drawable/icon_turno"
            android:title="@string/menu_cambioturno" />
        <item
            android:id="@+id/nav_cambioturnodia"
            android:icon="@drawable/icon_turnodia"
            android:title="@string/menu_cambioturnodia" />
        <item
            android:id="@+id/nav_consultarcomprobante"
            android:icon="@drawable/icon_consultarcomprobante"
            android:title="@string/menu_consultarcomprobante" />
    </group>
</menu>